# pandas-decimal

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
notebooks/: demo.ipynb
pandas_decimal/: __init__.py  array.py  dtype.py
tests/: conftest.py  test_basic.py  test_instantiation.py  test_operations.py  test_repr.py
